--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
     <!-- header start -->
-    <header class="header p-3 position-absolute start-0 top-0 end-0 " style="background-color: black;">
+    <header class="header p-3 position-absolute start-0 top-0 end-0 " >
         <div class="d-flex justify-content-between align-items-center">
             <a href="/" class="text-decoration-none text-white fs-5 fw-bold">Good Coffee</a>
 
@@ -46,7 +46,87 @@
         </div>
     </header>
     <!-- header End -->
+    <!-- flyout Navigation start -->
+    <nav class="collapse navbar-collapse dropdown-nav" id="navbar">
 
+        <div class="dropdown-nav_container container-xxl d-flex align-items-md-center">
+
+            <div class="row align-items-start ">
+                <div class="col-12 col-sm-4 mt-4">
+                    <a href="#" class="row text-decoration-none ">
+                        <div class="col-2 col-sm-12 mb-4">
+                            <img src="/img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
+                                height="240" loading="lazy">
+                        </div>
+                        <div class="col-10">
+                            <h3>
+                                Amazing Flavour
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            </p>
+                            <p>
+                                Learn More <i class="bi bi-arrow-right-short"></i>
+                            </p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-sm-4 mt-4">
+                    <a href="#" class="row text-decoration-none ">
+                        <div class="col-2 col-sm-12 mb-4">
+                            <img src="/img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
+                                height="240" loading="lazy">
+                        </div>
+                        <div class="col-10">
+                            <h3>
+                                Amazing Flavour
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            </p>
+                            <p>
+                                Learn More <i class="bi bi-arrow-right-short"></i>
+                            </p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-sm-4 mt-4">
+                    <a href="#" class="row text-decoration-none ">
+                        <div class="col-2 col-sm-12 mb-4">
+                            <img src="/img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
+                                height="240" loading="lazy">
+                        </div>
+                        <div class="col-10">
+                            <h3>
+                                Amazing Flavour
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            </p>
+                            <p>
+                                Learn More <i class="bi bi-arrow-right-short"></i>
+                            </p>
+                        </div>
+                    </a>
+                </div>
+
+
+            </div>
+
+
+            <button class="navbar-toggler dropdown-nav_closeNavBtn" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbar" aria-controls="navbar" aria-expanded="true" aria-label="Toggle navigation">
+                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor"
+                    class="bi bi-file-excel" viewBox="0 0 16 16">
+                    <path
+                        d="M5.18 4.616a.5.5 0 0 1 .704.064L8 7.219l2.116-2.54a.5.5 0 1 1 .768.641L8.651 8l2.233 2.68a.5.5 0 0 1-.768.64L8 8.781l-2.116 2.54a.5.5 0 0 1-.768-.641L7.349 8 5.116 5.32a.5.5 0 0 1 .064-.704z" />
+                    <path
+                        d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z" />
+                </svg>
+            </button>
+        </div>
+    </nav>
+    <!-- flyout Navigation end -->
 
 
 
