--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
     <!-- header start -->
-    <header class="header p-3 position-absolute start-0 top-0 end-0 " >
+    <header class="header p-3 position-absolute start-0 top-0 end-0 ">
         <div class="d-flex justify-content-between align-items-center">
             <a href="/" class="text-decoration-none text-white fs-5 fw-bold">Good Coffee</a>
 
@@ -127,7 +127,46 @@
         </div>
     </nav>
     <!-- flyout Navigation end -->
+    <!-- Hero Start -->
+    <section class="hero">
+        <div class="hero_overlay">
 
+        </div>
+        <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" loading="lazy"
+            class="hero_video">
+            <source src="/video/chama.mp4" type="video/mp4">
+        </video>
+
+
+
+        <div class="hero_content container-custom h-100 container-xxl position-relative">
+
+            <div class="d-flex h-100 align-items-center hero_content-width">
+                <div class="text-white">
+                   <h1 class="hero_heading fw-bold mb-4">
+                    Discover The Taste Of Real Coffee.
+                   </h1>
+                   <p class="lead mb-4">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, odit.
+                   </p>
+                   <a href="#" class="mt-2 btn btn-lg btn-outline-light" role="button">
+                       Buy now
+                   </a>
+                </div>
+            </div>
+        </div>
+
+        <a href="#scroll-down" class="hero_scroll-btn">
+            Explore <i class="bi bi-arrow-down-short"></i>
+        </a>
+
+    </section>
+    <!-- hero End -->
+
+
+    <a href="" id="scroll-down"></a>
+    
+    <!-- section One Start-->
 
 
 
