Uploading: cafe photo shoot and description

--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
 
             <div class="d-flex h-100 align-items-center hero_content-width">
                 <div class="text-white">
-                   <h1 class="hero_heading fw-bold mb-4">
-                    Discover The Taste Of Real Coffee.
-                   </h1>
-                   <p class="lead mb-4">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, odit.
-                   </p>
-                   <a href="#" class="mt-2 btn btn-lg btn-outline-light" role="button">
-                       Buy now
-                   </a>
+                    <h1 class="hero_heading fw-bold mb-4">
+                        Discover The Taste Of Real Coffee.
+                    </h1>
+                    <p class="lead mb-4">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, odit.
+                    </p>
+                    <a href="#" class="mt-2 btn btn-lg btn-outline-light" role="button">
+                        Buy now
+                    </a>
                 </div>
             </div>
         </div>
@@ -165,8 +165,98 @@
 
 
     <a href="" id="scroll-down"></a>
-    
+
     <!-- section One Start-->
+    <section class="steps container-custom">
+
+        <div class="row">
+            <div class="col-12 col-sm-6 d-md-flex justify-content-md-center">
+                <img src="/img/1-coffe-flavour.jpg" alt="coffe" width="413" height="400" loading="lazy"
+                    class="img-fluid pb-4 steps_section-thumbnail">
+            </div>
+            <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
+
+                <div class="stesp_content-width">
+                    <span>
+                        01
+                    </span>
+                    <h1 class="h2 mb-5">
+                        Amazing Coffee Flavour
+                    </h1>
+                    <p class="mb-5">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos id quos sequi sint
+                        assumenda facere!
+                    </p>
+                    <a href="#">Read More <i class="bi bi-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- section One End-->
+   
+    <section class="steps steps--background">
+        <div class="container-custom">
+
+            <div class="row">
+                <div class="col-12 col-sm-6 d-md-flex justify-content-md-center order-sm-1">
+                    <img src="/img/2-health-benefits.jpg" alt="health" width="413" height="400" loading="lazy"
+                        class="img-fluid pb-4 steps_section-thumbnail">
+                </div>
+                <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
+
+                    <div class="stesp_content-width">
+                        <span>
+                            02
+                        </span>
+                        <h1 class="h2 mb-5">
+                            Surprising Health Benefits
+                        </h1>
+                        <p class="mb-5">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos id quos sequi sint
+                            assumenda facere!
+                        </p>
+                        <a href="#">Read More <i class="bi bi-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- section One End-->
+    <section class="steps container-custom">
+
+        <div class="row">
+            <div class="col-12 col-sm-6 d-md-flex justify-content-md-center">
+                <img src="/img/3-essential-nutrients.jpg" alt="Essential" width="413" height="400" loading="lazy"
+                    class="img-fluid pb-4 steps_section-thumbnail">
+            </div>
+            <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
+
+                <div class="stesp_content-width">
+                    <span>
+                        03
+                    </span>
+                    <h1 class="h2 mb-5">
+                        Essential Nutrients
+                    </h1>
+                    <p class="mb-5">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos id quos sequi sint
+                        assumenda facere!
+                    </p>
+                    <a href="#">Read More <i class="bi bi-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- section One End-->
+
+
+    
+
+
+
 
 
 
