--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div>
                 <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    aria-label="Toggle navigation">Menu
                     <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor"
                         class="bi bi-list" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
@@ -58,7 +58,7 @@
                             <img src="/img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
                                 height="240" loading="lazy">
                         </div>
-                        <div class="col-10">
+                        <div class="col-10 text-white">
                             <h3>
                                 Amazing Flavour
                             </h3>
@@ -77,7 +77,7 @@
                             <img src="/img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
                                 height="240" loading="lazy">
                         </div>
-                        <div class="col-10">
+                        <div class="col-10 text-white">
                             <h3>
                                 Amazing Flavour
                             </h3>
@@ -85,7 +85,7 @@
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             </p>
                             <p>
-                                Learn More <i class="bi bi-arrow-right-short"></i>
+                                Learn More <i class="bi bi-arrow-right-short" ></i>
                             </p>
                         </div>
                     </a>
@@ -96,7 +96,7 @@
                             <img src="/img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
                                 height="240" loading="lazy">
                         </div>
-                        <div class="col-10">
+                        <div class="col-10 text-white">
                             <h3>
                                 Amazing Flavour
                             </h3>
@@ -194,7 +194,7 @@
 
     </section>
     <!-- section One End-->
-   
+
     <section class="steps steps--background">
         <div class="container-custom">
 
@@ -252,8 +252,86 @@
     </section>
     <!-- section One End-->
 
+    <!-- Section with 3 Col's Start -->
+    <section class="bg-dark text-white py-4">
+        <div class="container-custom my-4">
+            <di class="row">
+                <div class="col-12 col-sm-4 mb-4">
+                    <img class="mb-4 img-fluid" src="/img/1-coffee-flavour-small.jpg" alt="coffee flavour" width="441"
+                        height="248" loading="lazy">
+                    <h3>
+                        Amazing Coffee Flavour
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, quod velit. Neque inventore velit
+                        quo.
+                    </p>
+                </div>
 
-    
+                <div class="col-12 col-sm-4 mb-4">
+                    <img class="mb-4 img-fluid" src="/img/2-health-benefits-small.jpg" alt="health benefits" width="441"
+                        height="248" loading="lazy">
+                    <h3>
+                        Health Benefits
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, quod velit. Neque inventore velit
+                        quo.
+                    </p>
+                </div>
+
+                <div class="col-12 col-sm-4 mb-4">
+                    <img class="mb-4 img-fluid" src="/img/3-essential-nutrients-small.jpg" alt="essential nutrients"
+                        width="441" height="248" loading="lazy">
+                    <h3>
+                        Essential Nutrients
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, quod velit. Neque inventore velit
+                        quo.
+                    </p>
+                </div>
+            </di>
+        </div>
+    </section>
+    <!-- Section with 3 Col's End -->
+
+    <!-- Footer start -->
+    <footer class="footer bg-black text-white">
+        <div class="container-custom d-flex justify-content-between align-items-center py-3 border-highlight">
+            <div class="col-md-4 d-flex align-items-center">
+                <a href="https://github.com/jhonmanuelg/Landing_Page_using_Bootstrap_5" target="_blank" class="me-2 text-white text-decoration-none">
+                    <i class="bi bi-cup"></i>
+                    <span>
+                        &copy; Jhon Manuel Gil 2022
+                    </span>
+                </a>
+            </div>
+            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex text-white">
+                <i class="ms-3">
+                    <a href="#" class="text-white">
+                        <i class="bi bi-twitter"></i>
+                    </a>
+                </i>
+                <i class="ms-3">
+                    <a href="#" class="text-white">
+                        <i class="bi bi-facebook"></i>
+                    </a>
+                </i>
+                <i class="ms-3">
+                    <a href="#" class="text-white">
+                        <i class="bi bi-whatsapp"></i>
+                    </a>
+                </i>
+            </ul>
+        </div>
+
+    </footer>
+
+    <!-- Footer End -->
+
+
+
 
 
 
