--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="col-12 col-sm-4 mt-4">
                     <a href="#" class="row text-decoration-none ">
                         <div class="col-2 col-sm-12 mb-4">
-                            <img src="/img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
+                            <img src="img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
                                 height="240" loading="lazy">
                         </div>
                         <div class="col-10 text-white">
@@ -93,7 +93,7 @@
                 <div class="col-12 col-sm-4 mt-4">
                     <a href="#" class="row text-decoration-none ">
                         <div class="col-2 col-sm-12 mb-4">
-                            <img src="/img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
+                            <img src="img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
                                 height="240" loading="lazy">
                         </div>
                         <div class="col-10 text-white">
@@ -134,7 +134,7 @@
         </div>
         <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" loading="lazy"
             class="hero_video">
-            <source src="/video/chama.mp4" type="video/mp4">
+            <source src="video/chama.mp4" type="video/mp4">
         </video>
 
 
@@ -171,7 +171,7 @@
 
         <div class="row">
             <div class="col-12 col-sm-6 d-md-flex justify-content-md-center">
-                <img src="/img/1-coffe-flavour.jpg" alt="coffe" width="413" height="400" loading="lazy"
+                <img src="img/1-coffe-flavour.jpg" alt="coffe" width="413" height="400" loading="lazy"
                     class="img-fluid pb-4 steps_section-thumbnail">
             </div>
             <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
@@ -200,7 +200,7 @@
 
             <div class="row">
                 <div class="col-12 col-sm-6 d-md-flex justify-content-md-center order-sm-1">
-                    <img src="/img/2-health-benefits.jpg" alt="health" width="413" height="400" loading="lazy"
+                    <img src="img/2-health-benefits.jpg" alt="health" width="413" height="400" loading="lazy"
                         class="img-fluid pb-4 steps_section-thumbnail">
                 </div>
                 <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
@@ -228,7 +228,7 @@
 
         <div class="row">
             <div class="col-12 col-sm-6 d-md-flex justify-content-md-center">
-                <img src="/img/3-essential-nutrients.jpg" alt="Essential" width="413" height="400" loading="lazy"
+                <img src="img/3-essential-nutrients.jpg" alt="Essential" width="413" height="400" loading="lazy"
                     class="img-fluid pb-4 steps_section-thumbnail">
             </div>
             <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
@@ -257,7 +257,7 @@
         <div class="container-custom my-4">
             <di class="row">
                 <div class="col-12 col-sm-4 mb-4">
-                    <img class="mb-4 img-fluid" src="/img/1-coffee-flavour-small.jpg" alt="coffee flavour" width="441"
+                    <img class="mb-4 img-fluid" src="img/1-coffee-flavour-small.jpg" alt="coffee flavour" width="441"
                         height="248" loading="lazy">
                     <h3>
                         Amazing Coffee Flavour
@@ -269,7 +269,7 @@
                 </div>
 
                 <div class="col-12 col-sm-4 mb-4">
-                    <img class="mb-4 img-fluid" src="/img/2-health-benefits-small.jpg" alt="health benefits" width="441"
+                    <img class="mb-4 img-fluid" src="img/2-health-benefits-small.jpg" alt="health benefits" width="441"
                         height="248" loading="lazy">
                     <h3>
                         Health Benefits
@@ -281,7 +281,7 @@
                 </div>
 
                 <div class="col-12 col-sm-4 mb-4">
-                    <img class="mb-4 img-fluid" src="/img/3-essential-nutrients-small.jpg" alt="essential nutrients"
+                    <img class="mb-4 img-fluid" src="img/3-essential-nutrients-small.jpg" alt="essential nutrients"
                         width="441" height="248" loading="lazy">
                     <h3>
                         Essential Nutrients
