Uploading: The footer and culminate the project of a good coffee 02

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="col-12 col-sm-4 mt-4">
                     <a href="#" class="row text-decoration-none ">
                         <div class="col-2 col-sm-12 mb-4">
-                            <img src="/img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
+                            <img src="img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
                                 height="240" loading="lazy">
                         </div>
                         <div class="col-10 text-white">
