updating to tag nav and img

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="/" class="text-decoration-none text-white fs-5 fw-bold">Good Coffee</a>
 
             <div>
-                <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler text-white " type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false"
                     aria-label="Toggle navigation">Menu
                     <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor"
@@ -54,29 +54,30 @@
 
             <div class="row align-items-start ">
                 <div class="col-12 col-sm-4 mt-4">
-                    <a href="#" class="row text-decoration-none ">
-                        <div class="col-2 col-sm-12 mb-4">
-                            <img src="img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
-                                height="240" loading="lazy">
+                    <a href="#coffe-flavou" class="row text-decoration-none navbar_card ">
+                        <div class="col-2 col-sm-12 mb-4 navbar_card_img">
+                            <img src="img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid_nav" 
+                                 loading="lazy">
                         </div>
                         <div class="col-10 text-white">
                             <h3>
                                 Amazing Flavour
                             </h3>
+                            
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             </p>
                             <p>
-                                Learn More <i class="bi bi-arrow-right-short"></i>
+                                Learn More  <i class="bi bi-arrow-right-short" href="#coffe-flavour"></i>
                             </p>
                         </div>
                     </a>
                 </div>
                 <div class="col-12 col-sm-4 mt-4">
-                    <a href="#" class="row text-decoration-none ">
-                        <div class="col-2 col-sm-12 mb-4">
-                            <img src="img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
-                                height="240" loading="lazy">
+                    <a href="#health-benefits" class="row text-decoration-none navbar_card">
+                        <div class="col-2 col-sm-12 mb-4 navbar_card_img"">
+                            <img src="img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid_nav" 
+                                 loading="lazy">
                         </div>
                         <div class="col-10 text-white">
                             <h3>
@@ -92,10 +93,10 @@
                     </a>
                 </div>
                 <div class="col-12 col-sm-4 mt-4">
-                    <a href="#" class="row text-decoration-none ">
-                        <div class="col-2 col-sm-12 mb-4">
-                            <img src="img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid" width="270"
-                                height="240" loading="lazy">
+                    <a href="#essential-nutrients" class="row text-decoration-none navbar_card">
+                        <div class="col-2 col-sm-12 mb-4 navbar_card_img"">
+                            <img src="img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid_nav" 
+                                 loading="lazy">
                         </div>
                         <div class="col-10 text-white">
                             <h3>
@@ -144,7 +145,7 @@
             <div class="d-flex h-100 align-items-center hero_content-width">
                 <div class="text-white">
                     <h1 class="hero_heading fw-bold mb-4">
-                        Discover The Taste Of Real Coffee.
+                        Discover The Taste Of Coffee.
                     </h1>
                     <p class="lead mb-4">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, odit.
@@ -167,20 +168,20 @@
     <a href="#" id="scroll-down"></a>
 
     <!-- section One Start-->
-    <section class="steps container-custom">
+    <section class="steps container-custom" id="coffe-flavou">
 
-        <div class="row">
+        <div class="row" >
             <div class="col-12 col-sm-6 d-md-flex justify-content-md-center">
-                <img src="img/1-coffe-flavour.jpg" alt="coffe" width="413" height="400" loading="lazy"
+                <img  src="img/1-coffe-flavour.jpg" alt="coffe" width="413" height="400" loading="lazy"
                     class="img-fluid pb-4 steps_section-thumbnail">
             </div>
             <div class="col-12 col-sm-6 align-self-center justify-content-md-center">
 
                 <div class="stesp_content-width">
-                    <span>
+                    <span >
                         01
                     </span>
-                    <h1 class="h2 mb-5">
+                    <h1 class="h2 mb-5" >
                         Amazing Coffee Flavour
                     </h1>
                     <p class="mb-5">
@@ -195,7 +196,7 @@
     </section>
     <!-- section One End-->
 
-    <section class="steps steps--background">
+    <section class="steps steps--background" id="health-benefits">
         <div class="container-custom">
 
             <div class="row">
@@ -224,7 +225,7 @@
 
     </section>
     <!-- section One End-->
-    <section class="steps container-custom">
+    <section class="steps container-custom" id="essential-nutrients">
 
         <div class="row">
             <div class="col-12 col-sm-6 d-md-flex justify-content-md-center">
