--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-12 col-sm-4 mt-4">
                     <a href="#essential-nutrients" class="row text-decoration-none navbar_card">
-                        <div class="col-2 col-sm-12 mb-4 navbar_card_img"">
+                        <div class="col-2 col-sm-12 mb-4 navbar_card_img">
                             <img src="img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid_nav" 
                                  loading="lazy">
                         </div>
