updating to tag nav and img

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
     <!-- header End -->
 
     <!-- flyout Navigation start -->
-    <nav class="collapse navbar-collapse dropdown-nav" id="navbar">
+    <nav class="collapse navbar-collapse dropdown-nav mb-5" id="navbar">
 
         <div class="dropdown-nav_container container-xxl d-flex align-items-md-center">
 
             <div class="row align-items-start ">
-                <div class="col-12 col-sm-4 mt-4">
+                <div class="col-12 col-sm-4 mt-5">
                     <a href="#coffe-flavou" class="row text-decoration-none navbar_card ">
                         <div class="col-2 col-sm-12 mb-4 navbar_card_img">
                             <img src="img/1-coffe-flavour.jpg" alt="coffe flavour" class="img-fluid_nav" 
